plugins {
    id 'java'
    id 'idea'
    id 'antlr'
    id 'application'
    id "com.github.johnrengelman.shadow" version "6.1.0"
}

version '1.0'

sourceCompatibility = 16

application {
    mainClassName = 'petrigaal.Main'
}

repositories {
    mavenCentral()
}

sourceSets {
    main.java.srcDirs += "${project.buildDir}/generated-src/antlr/main"
}

dependencies {
    implementation "guru.nidi:graphviz-java:0.12.1"
    implementation group: 'fr.lip6.pnml', name: 'framework.releng', version: '2.2.12', ext: 'pom'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
    implementation 'info.picocli:picocli:4.6.1'

    antlr "org.antlr:antlr4:4.9.2"
}

test {
    useJUnitPlatform()
}

generateGrammarSource {
    maxHeapSize = "64m"
    arguments += ["-visitor", "-long-messages", "-package", "petrigaal.antlr"]
    outputDirectory = file("${project.buildDir}/generated-src/antlr/main/petrigaal/antlr")
}
